# recognize-handwritten-letters

./: .flake8  .gitignore  README.md  add_model.onnx  exported_model.onnx  good-practices.md  index.html  mnist_for_recognize_letters.ipynb  model.json  old-pyproject.toml  pyproject.toml  random_forest_mnist_light.onnx  scan_explicit.onnx  train-mnist.html
.github/workflows/: ci.yml  deploy-documentation.yml
assets/img/: pipeline-diagram.drawio
data/model_results/classic/: one_hidden_layer_evaluate_22-12-23.pkl  one_hidden_layer_history_22-12-23.pkl  readme.md
data/model_results/cnn/: readme.md
data/model_weights/classic/: readme.md
data/model_weights/cnn/: cnn_experiment_21-12-23.h5  cnn_experiment_evaluate_21-12-23.pkl  cnn_experiment_history_21-12-23.pkl
data/raw/: README.md  sample-original-distribution.parquet  sample-uniform-distribution.parquet
data/results/classic/: one_hidden_layer_22-12-23.h5
docs/: make.bat
docs/source/: conf.py  index.rst  modules.rst  plot_training_curve.rst  sample_dataset.rst
notebooks/: README.md  advent-of-code.ipynb  create-new-letters.ipynb  create-sample.ipynb  create_sample.ipynb  dimension-reduction.ipynb  exploratory-analysis.ipynb  gan.ipynb  graph-community.ipynb  graph-gnn.ipynb  latent-space.ipynb  model-visualization.ipynb  model_vizualization.ipynb  nlp.ipynb  notebook-final.ipynb  onnx-inference.ipynb  prediction-deep-learning.ipynb  prediction-machine-learning.ipynb  prediction.ipynb  process-image.ipynb
src/: README.md  classic_deep-learning-training.py  cnn_deep_learning_training.py  constants.py  execute_model.py  exploratory-analysis.ipynb  model_vizualization.ipynb  onnx_temp.py  plot_training_curve.py  prediction.ipynb  sample_test_dataset.py  scan.py  temp.py  temp_scan.py  utils.py
src/classification/: plot.py
src/classification/training/: callbacks.py  evaluation.py  launch_training.py
src/data/: inference_preprocessing.py  load_data.py  plot.py  preprocessing.py
src/functions/: plot_training_curve.py  sample_dataset.py
src/latent_space/: plot.py
src/latent_space/models/: README.md  auto_encoder.py  variational_auto_encoder.py
src/models/: auto_encoder.py  callbacks.py  deep_learning.py  machine_learning.py
src/notebooks/: create-new-letters.ipynb  dimension-reduction.ipynb  exploratory-analysis.ipynb  model_vizualization.ipynb  prediction.ipynb
src/plot/: image.py  plot_training_curve.py
src/rendu-final/: notebook-final.ipynb
src/training/: classic_deep-learning-training.py  cv_strategy.py  evaluation.py
src/utils/: constants.py  misc.py  sample_dataset.py  save.py
src/website/: index.html  mnist_for_recognize_letters.ipynb  mnist_model.json  model.json
website/: index.html  mnist_for_recognize_letters.ipynb
